[project]
name = "data-sci-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.0",
    "hnswlib>=0.8.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.5",
    "psutil>=7.1.3",
    "python-louvain>=0.16",
    "scikit-learn>=1.7.2",
]
